@@ -18,15 +18,12 @@
 
 <jsap>
     <parameters>
-
         <unflaggedOption>
             <id>input</id>
             <required>true</required>
-            <!--greedy>true</greedy-->
-            <help>The compact alignment file(s) to read as input.</help>
+            <greedy>true</greedy>
+            <help>The .compact-reads or fasta/fastq files to use as input.</help>
         </unflaggedOption>
-
-
         <flaggedOption>
             <id>output</id>
             <shortFlag>o</shortFlag>
@@ -34,13 +31,12 @@
             <required>false</required>
             <help>The basename of the output counts.</help>
         </flaggedOption>
-
-           <flaggedOption>
+        <flaggedOption>
             <id>barcode-info</id>
             <shortFlag>b</shortFlag>
             <longFlag>barcode-info</longFlag>
-            <required>false</required>
-            <help>A tab delimited file with barcode[\t]barcodeIndex\tsampleId</help>
+            <required>true</required>
+            <help>A tab delimited, headerless file with sampleId[\t]barcodeIndex[\t]barcode </help>
         </flaggedOption>
         <flaggedOption>
             <id>max-mismatches</id>
@@ -76,7 +72,28 @@
             <stringParser>
                 <classname>StringStringParser</classname>
             </stringParser>
-            <help>The extremity that contains the barcode. Can be either 3_PRIME or 5_PRIME.</help>
+            <help>The extremity that contains the barcode. Can be either 3_PRIME (barcode at the end of the sequence) or 5_PRIME (barcode at the start of the sequence).</help>
         </flaggedOption>
+         <flaggedOption>
+            <id>quality-encoding</id>
+            <longFlag>quality-encoding</longFlag>
+            <required>false</required>
+              <defaults>
+                <string>Illumina</string>
+            </defaults>
+            <help>ONLY when converting fastq files (not applicable for .compact-reads files). The encoding for quality scores. The default quality encoding is that used by the Illumina pipeline 1.3+. Valid encodings include Illumina, Sanger and Solexa.</help>
+         </flaggedOption>
+        <switch>
+            <id>include-descriptions</id>
+            <longFlag>include-descriptions</longFlag>
+            <defaults>false</defaults>
+            <help>ONLY when converting fastq files (not applicable for .compact-reads files). When this switch is provided, include description lines into the compact output. By default, ignore description lines.</help>
+        </switch>
+        <switch>
+            <id>include-identifiers</id>
+            <longFlag>include-identifiers</longFlag>
+            <defaults>false</defaults>
+            <help>ONLY when converting fastq files (not applicable for .compact-reads files). When this switch is provided, include identifiers into the compact output. By default, ignore identifiers. Identifiers are parsed out of description lines as the token before the first space or tab character.</help>
+        </switch>
     </parameters>
 </jsap>
